# Claude_Code_Analytics_Platform

./: .env.example  .gitignore  LLM_USAGE_LOG.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260404_0001_initial_schema.py
app/: dashboard.py
scripts/: load_data.py  preview_analytics.py
src/claude_analytics/: __init__.py  config.py  schema.py
src/claude_analytics/analytics/: __init__.py  schemas.py  service.py
src/claude_analytics/api/: __init__.py  app.py  deps.py  v1.py
src/claude_analytics/dashboard/: data.py
src/claude_analytics/db/: base.py  models.py  session.py
src/claude_analytics/etl/: __init__.py  load.py  parser.py
